Self-updater now keeps the same output/error streams.